syntax = "proto3";

package com.grishmir.iton.numbergenerator;

service NumberGenerator {
  rpc GenerateNumbers(GenerateRequest) returns (stream NumberResponse);
}

message GenerateRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 number = 1;
}